vlib/v/checker/tests/struct_field_init_option_ref_err.vv
module main

struct Foo {}

struct Bar {
	field ?&Foo
}

fn main() {
	foo := ?Foo{}
	_ := Bar{
		field: foo
	}
}
